Tas valué par map (E -> Integer) terminé, javadoc a venir